gcc/testsuite/rust/rustc/ui/use/use-mod/use-mod-2.rs
mod foo {
    use self::{self};
// { dg-error ".E0432." "" { target *-*-* } .-1 }
// { dg-error ".E0432." "" { target *-*-* } .-2 }

    use super::{self};
// { dg-error ".E0432." "" { target *-*-* } .-1 }
// { dg-error ".E0432." "" { target *-*-* } .-2 }
}

fn main() {}

